# hotel

./: CMakeLists.txt  hotel-app.c  hotel-app.h  hotel-db.c  hotel-db.h  hotel-ll.c  hotel-ll.h  hotel-main.c  hotel-main.h  hotel-mt.c  hotel-mt.h  hotel.gresource.xml  hotel.h  list-test.c  readme.md  resource.c  set-test.c
resources/ui/: main.glade
